plugins {
    id 'application'
    id "io.freefair.lombok" version '6.3.0'
}

group = 'si-result-detector'
version = '1.0.0-SNAPSHOT'
description = 'Latest-visible predicate SI black-box verifier'

application {
    mainClass = 'Main'
}

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.guava:guava:31.0.1-jre'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'info.picocli:picocli:4.6.3'
    implementation 'org.roaringbitmap:RoaringBitmap:0.9.35'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
    implementation files('build/monosat/monosat.jar')

    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

test {
    systemProperty "java.library.path", "$buildDir/monosat"
    jvmArgs += [ "-Xmx4096m" ]
    useJUnitPlatform()
}

tasks.named('run') {
    systemProperty "java.library.path", "$buildDir/monosat"
    jvmArgs += [ "-Xmx4096m" ]
}

tasks.register('configureMonoSAT', Exec) {
    commandLine 'cmake', '-B', layout.buildDirectory.dir('monosat').get().asFile, '-S', file('monosat'), '-DJAVA=ON', '-DBUILD_STATIC=OFF'
}

tasks.register('buildMonoSAT', Exec) {
    dependsOn 'configureMonoSAT'
    commandLine 'cmake', '--build', layout.buildDirectory.dir('monosat').get().asFile, '-j8'
}

jar {
    dependsOn 'buildMonoSAT'

    manifest {
        attributes 'Main-Class': 'Main'
    }

    duplicatesStrategy('exclude')
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    from {
        "$buildDir/monosat/libmonosat.so"
    }

}

tasks.named('compileJava') {
    dependsOn 'buildMonoSAT'
}

tasks.named('compileTestJava') {
    dependsOn 'buildMonoSAT'
}
